# aws-database-encryption-sdk-dynamodb

DynamoDbEncryption/runtimes/rust/: benerate2.sh  benerate3.sh  build.sh  new_build.sh  replace.sh
DynamoDbEncryption/runtimes/rust/ImplementationFromDafny-rust/src/: ImplementationFromDafny-rs.dtr
DynamoDbEncryption/runtimes/rust/dafny_impl/: Cargo.toml  PermTest.json  encrypt.json  extra_ddb.txt  extra_kms.txt  import_ddb.sh  import_kms.sh  import_mpl.sh  import_primitives.sh
DynamoDbEncryption/runtimes/rust/dafny_impl/src/: ImplementationFromDafny-rs.dtr  aes_gcm.rs  (+19 more)
DynamoDbEncryption/runtimes/rust/prev_src/: client.rs  lib.rs  operation.rs  types.rs  wrapped.rs
DynamoDbEncryption/runtimes/rust/src/: conversions.rs
TestVectors/dafny/DDBEncryption/src/: EncryptManifest.dfy  Index.dfy  JsonConfig.dfy  JsonItem.dfy  TestVectors.dfy  WriteSetPermutations.dfy
TestVectors/runtimes/net/tests/: TestsFromDafny-cs.dtr
submodules/runtimes/rust/: benerate1.sh  build.sh
submodules/runtimes/rust/dafny_impl/: Cargo.toml
submodules/runtimes/rust/dafny_impl/alt_src/: aes_gcm.rs  digest.rs  ecdh.rs  ecdsa.rs  hmac.rs  implementation_from_dafny.rs  ptr.rs  rsa.rs  rsa_new.rs
submodules/runtimes/rust/dafny_impl/src/: ImplementationFromDafny-rs.dtr  _externs.rs  aes_gcm.rs  aes_kdf_ctr.rs  concurrent_call.rs  dafny_libraries.rs  dafnylibraries.rs  ddb.rs  digest.rs  ecdh.rs  ecdsa.rs  externs_UTF8.rs  externs_utf8.rs  fileio.rs  hmac.rs  kms.rs  lib.rs  local_cmc.rs  mutable_map.rs  random.rs  rsa.rs  sets.rs  software_externs.rs  storm_tracker.rs  time.rs  uuid.rs
(+2464 files in other folders)
