[package]
name = "dafny_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-lc-rs = "1.8.0"
aws-sdk-dynamodb = "1.37.0"
aws-types = "1.3.3"
chrono = "0.4.38"
dafny_runtime = { path = "../dafny_runtime_rust"}
dashmap = "6.0.1"
der = "0.7.9"
num-traits = "0.2.19"
rsa = "0.9.6"
uuid = { version = "1.9.1", features = ["v4"] }

[lib]
path = "src/ImplementationFromDafny.rs"
